# ocr-transformer-usage

./: README.md  pyproject.toml
src/ocr_transformer_usage/: __init__.py  main.py
src/ocr_transformer_usage/templates/: index.html
